ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-external-ip
    networking.gke.io/v1beta1.FrontendConfig: fronted-config-for-ing
    networking.gke.io/managed-certificates: my-owncloud.xyz-mc
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
        - path: /auth/*   
          pathType: ImplementationSpecific
          backend:
            service:
              name: keycloak-http
              port:
                number: 80   
  # defaultBackend:
  #   service:
  #     name:  keycloak-http
  #     port:
  #       number: 80
